--- a/index.html
+++ b/index.html
@@ -3,74 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tỏ tình</title>
+    <title>Gửi tặng ...</title>
     <style>
         body{
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: pink;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: pink;
             height: 100vh;
         }
-        #container{
-            background-color: palevioletred;
-            padding: 50px;
-            border-radius: 40px;
-            width: 300px;
-        }
-        h3{
-            text-align: center;
-        }
-        .btn{
-            width: 100px;
-            height: 40px;
-            padding: 10px;
-            margin-left: 30px;
+        button{
+            padding: 20px;
             border: none;
-            border-radius: 15px;
-            background-color: wheat;
-            text-align: center;
-            text-decoration: none;
+            border-radius: 20px;
+            background-color: plum;
             cursor: pointer;
         }
-        .btn:hover{
-            background-color: plum
-        }
-        #no{
-            position: absolute;
-            width: 100px;
-            height: 40px;
-            margin-left: 40px;
-            transition: all 0.2s ease;
+        button:hover{
+            background-color: palevioletred;
         }
     </style>
 </head>
 <body>
-    <div id="container">
-        <div>
-            <h3>LÀM BẠN GÁI ANH NHA =))</h3>
-            <input class="btn" id="yes" type="button" value="Đồng ý &#x2764;" onclick="window.location.href='dongy.html'" >
-            <input class="btn" id="no" type="button" value="Không :((">
-        </div>
+    <div>
+        <a href="totinh.html"><button>NHẤN</button></a>
     </div>
-    <script>
-        const button = document.getElementById('no');
-
-        const handleMove = () => {
-            const newX = Math.random() * (window.innerWidth - button.offsetWidth);
-            const newY = Math.random() * (window.innerHeight - button.offsetHeight);
-
-            button.style.left = newX + 'px';
-            button.style.top = newY + 'px';
-        };
-
-        // Sử dụng sự kiện 'click' cho điện thoại di động
-        const eventName = ('ontouchstart' in window) ? 'touchstart' : 'click';
-
-        button.addEventListener(eventName, handleMove);
-    </script>
 </body>
 </html>
