--- a/dongy.html
+++ b/dongy.html
@@ -1,49 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heart and Fireworks</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: white;
-            overflow: hidden;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Heart Shape</title>
+<style>
+  body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: pink;
+  }
 
-        #heart {
-            position: relative;
-            width: 400px;
-            height: 400px;
-            background-image: url('https://i.pinimg.com/236x/96/10/3e/96103e77050891654de2de6146f10302.jpg'); /* Thay 'heart.png' bằng URL của hình trái tim */
-            background-size: cover;
-            animation: heartbeat 1s infinite;
-        }
-        p{
-            text-align: center;
-        }
-        @keyframes heartbeat {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.2);
-            }
-            100% {
-                transform: scale(1);
-            }
-        }
+  .heart {
+    width: 200px;
+    height: 200px;
+    position: relative;
+    animation: heartbeat 1s infinite;
+  }
 
-        
+  .heart:before,
+  .heart:after {
+    position: absolute;
+    content: "";
+    left: 100px;
+    top: 0;
+    width: 100px;
+    height: 160px;
+    background-color: red;
+    border-radius: 100px 100px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+  }
 
-    </style>
+  .heart:after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+  }
+  .heart span {
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 15px;
+    z-index: 1;
+    
+  }
+
+  @keyframes heartbeat {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+</style>
 </head>
 <body>
-    <div id="heart"><p>anh yêu em nhiều nhắm</p></div>
+<div class="heart">
+    <span>ANH YÊU EM NHIỀU NHẮM</span>
+</div>
 </body>
 </html>
