--- a/index.html
+++ b/index.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gửi tặng ...</title>
+    <title>Gửi em, tình yêu của anh ❤️</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <style>
-        body{
-            font-family: Arial, sans-serif;
+        body {
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: pink;
+            background-color: #fce4ec; /* Màu hồng phấn nhẹ nhàng */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            /* Hiệu ứng mờ dần khi tải trang */
+            animation: fadeIn 1.5s ease-in-out;
         }
-        button{
-            padding: 20px;
+
+        .container {
+            text-align: center;
+        }
+
+        .start-button {
+            font-family: 'Pacifico', cursive; /* Áp dụng font chữ nghệ thuật */
+            font-size: 24px;
+            padding: 20px 40px;
             border: none;
-            border-radius: 20px;
-            background-color: plum;
+            border-radius: 50px;
+            background: linear-gradient(45deg, #ff80ab, #ffc1e3); /* Màu gradient đẹp mắt */
+            color: white;
             cursor: pointer;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+            text-decoration: none; /* Bỏ gạch chân của thẻ a */
         }
-        button:hover{
-            background-color: palevioletred;
+
+        .start-button:hover {
+            transform: scale(1.1); /* Phóng to khi di chuột vào */
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Định nghĩa animation */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: scale(0.9);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
     </style>
 </head>
 <body>
-    <div>
-        <a href="totinh.html"><button>NHẤN</button></a>
+    <div class="container">
+        <a href="totinh.html" class="start-button">Nhấn vào đây đi bé 💌</a>
     </div>
 </body>
 </html>
