--- a/dongy.html
+++ b/dongy.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anh yêu em! ❤️</title>
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❤️</text></svg>">
 <style>
   body, html {
     height: 100%;
@@ -18,8 +19,8 @@
   /* **SỬA LỖI:** Tăng kích thước trái tim và các thành phần con */
   .heart {
     /* Tăng kích thước gốc từ 200px lên 250px */
-    width: 500px; 
-    height: 500px;
+    width: 250px; 
+    height: 250px;
     position: relative;
     animation: heartbeat 1.2s infinite ease-in-out;
   }
@@ -52,7 +53,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     /* Tăng kích thước chữ cho phù hợp */
-    font-size: 24px; 
+    font-size: 19px; 
     font-weight: bold;
     color: white;
     z-index: 1;
