--- a/dongy.html
+++ b/dongy.html
@@ -5,105 +5,41 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anh yêu em! ❤️</title>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❤️</text></svg>">
-<style>
-  body, html {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1a000d;
-    overflow: hidden;
-  }
-
-  /* **SỬA LỖI:** Tăng kích thước trái tim và các thành phần con */
-  .heart {
-    /* Tăng kích thước gốc từ 200px lên 250px */
-    width: 250px; 
-    height: 250px;
-    position: relative;
-    animation: heartbeat 1.2s infinite ease-in-out;
-  }
-
-  .heart:before,
-  .heart:after {
-    position: absolute;
-    content: "";
-    /* Tăng các giá trị tương ứng */
-    left: 125px; /* = width / 2 */
-    top: 0;
-    width: 125px; /* = width / 2 */
-    height: 200px; /* = height * 0.8 */
-    background-color: #ff4081;
-    border-radius: 125px 125px 0 0;
-    transform: rotate(-45deg);
-    transform-origin: 0 100%;
-  }
-
-  .heart:after {
-    left: 0;
-    transform: rotate(45deg);
-    transform-origin: 100% 100%;
-  }
-
-  .heart span {
-    font-family: 'Quicksand', sans-serif;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    /* Tăng kích thước chữ cho phù hợp */
-    font-size: 19px; 
-    font-weight: bold;
-    color: white;
-    z-index: 1;
-    text-align: center;
-    width: 100%;
-    animation: fadeInText 2s ease-in-out;
-  }
-
-  @keyframes heartbeat {
-    0%, 100% { transform: scale(1); }
-    10%, 30% { transform: scale(0.95); }
-    20%, 40%, 60%, 80% { transform: scale(1.1); }
-    50%, 70%, 90% { transform: scale(1); }
-  }
-  
-  @keyframes fadeInText {
-      from { opacity: 0; }
-      to { opacity: 1; }
-  }
-</style>
+<link rel="stylesheet" href="css/love.css">
 </head>
+
+
 <body>
 
-<div class="heart">
-    <span>ANH YÊU EM<br>NHIỀU LẮM</span>
-</div>
+    <audio autoplay="autopaly" loop="loop" id="audios" preload="auto">
+        <source src="MP3/1.mp3" />
+    </audio>
 
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-<script>
-    function celebrate() {
-        const duration = 5 * 1000;
-        const animationEnd = Date.now() + duration;
-        const defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 0 };
+    <div class="container" onselectstart="return false;" unselectable="on" style="-moz-user-select:none;">
 
-        function randomInRange(min, max) {
-            return Math.random() * (max - min) + min;
-        }
+        <div class="body_left">
+            <img src="images/biubiubiu.gif" alt="" ondragstart='return false;'>
+        </div>
 
-        const interval = setInterval(function() {
-            const timeLeft = animationEnd - Date.now();
-            if (timeLeft <= 0) {
-                return clearInterval(interval);
-            }
-            const particleCount = 50 * (timeLeft / duration);
-            confetti(Object.assign({}, defaults, { particleCount, origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 } }));
-            confetti(Object.assign({}, defaults, { particleCount, origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 } }));
-        }, 250);
-    }
-    celebrate();
-</script>
+        <div class="body_center love">
+            <div class="block">
+                <div class="div1"></div>
+                <div class="div2"></div>
+                <div class="div3"></div>
+                <div class="div4"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="border">
+            <div class="border-top"></div>
+            <div class="border-bottom"></div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="js/love.js"></script>
 
 </body>
+
 </html>
