--- a/dongy.html
+++ b/dongy.html
@@ -5,14 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Anh yêu em! ❤️</title>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>❤️</text></svg>">
-<link rel="stylesheet" href="css/love.css">
+<link rel="stylesheet" href="love.css">
 </head>
 
 
 <body>
 
     <audio autoplay="autopaly" loop="loop" id="audios" preload="auto">
-        <source src="MP3/1.mp3" />
+        <source src="1.mp3" />
     </audio>
 
     <div class="container" onselectstart="return false;" unselectable="on" style="-moz-user-select:none;">
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="js/love.js"></script>
+    <script type="text/javascript" src="love.js"></script>
 
 </body>
 
