--- a/totinh.html
+++ b/totinh.html
@@ -94,7 +94,7 @@
         <h3>Làm bạn gái anh nha? 🥰</h3>
         <div class="button-group">
             <div class="button-wrapper">
-                <button class="btn" id="yes-btn" onclick="window.location.href='dongy.html'">Đồng ý ❤️</button>
+                <button class="btn" id="yes-btn" onclick="href='dongy.html'>Đồng ý ❤️</button>
             </div>
             <div class="button-wrapper">
                 <button class="btn" id="no-btn">Không :(</button>
